Atualização do design

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="backgraound.css">
     <title>Jogo da memória</title>
 </head>
-<body>
+<body class="wrapper">
 
     <header>
 
@@ -14,7 +15,7 @@
 
     </header>
     
-    <main class="memory-game">
+    <main class="memory-game ">
         <div class="card" data-card="bowser">
             <img class="card-front" src="./img/bowser.jpg" alt="Face da carta">
             <img class="card-back" src="./img/box.png" alt="Verso da carta">
